Quang/task3/pod-test-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nhq-pod-pvc
  namespace: nhq-pin
spec:
  volumes:
    - name: nhq-volume
      persistentVolumeClaim:
        claimName: nhq-pvc
  containers:
  - name: nhq-pod-pvc
    image: nginx:latest
    volumeMounts:
    - mountPath: "/usr/share/nginx/html"
      name: nhq-volume
