Quang/task3/test-create-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nhq-test
  namespace: nhq-pin
spec:
  serviceAccountName: nhq-svc-acc
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
